--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   json_annotation:
+  fluttertoast:
+  provider:
   device_preview:
   flutter_screenutil:
 
